[gd_scene load_steps=41 format=3 uid="uid://tdciqdl46hah"]

[ext_resource type="Script" uid="uid://b0j3irx7ewbf" path="res://main_juego.gd" id="1_d6ytk"]
[ext_resource type="PackedScene" uid="uid://4jjq52b8upil" path="res://Scene/pescador.tscn" id="1_s1cr2"]
[ext_resource type="Texture2D" uid="uid://cq866kxannpmm" path="res://Assets/Fondos/ZonasOceano/FondoProfundidad1-2.png" id="2_1u8df"]
[ext_resource type="Script" uid="uid://c40i1ipctdbbr" path="res://Scripts/FishBox.gd" id="2_ypr6b"]
[ext_resource type="PackedScene" uid="uid://bhi28l5twjyu6" path="res://Scene/Peces/Salmon.tscn" id="3_ya0dr"]
[ext_resource type="Texture2D" uid="uid://ckdpmqhnowqtm" path="res://Assets/Fondos/ZonasOceano/FondoAbisal.png" id="4_82ygg"]
[ext_resource type="PackedScene" uid="uid://bg1wepdsnpm26" path="res://Scene/orca.tscn" id="4_f8irq"]
[ext_resource type="Texture2D" uid="uid://djy7ggdscdqk" path="res://Assets/Capturas/Captura normal.png" id="4_ywkuk"]
[ext_resource type="Script" uid="uid://djl7ionrr1pwh" path="res://Scripts/Luces/zona_abisal.gd" id="5_cweaw"]
[ext_resource type="PackedScene" uid="uid://uun1lvtno1sv" path="res://Scene/Peces/Atun.tscn" id="5_sxn4p"]
[ext_resource type="Texture2D" uid="uid://bwwtgycuyj036" path="res://Assets/Fondos/FondoCielo.png" id="6_1u8df"]
[ext_resource type="Texture2D" uid="uid://c5alf4i5oueex" path="res://Assets/Fondos/ZonasOceano/FondoMar.png" id="6_elcoi"]
[ext_resource type="Script" uid="uid://cyftrrtu8oggn" path="res://Scripts/Luces/zona_hadal.gd" id="6_gsydt"]
[ext_resource type="Texture2D" uid="uid://b6lek2xcudume" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (6).png" id="7_a0wg1"]
[ext_resource type="Texture2D" uid="uid://rwf16guerkuw" path="res://Assets/DecoracionFondo/muelle.png" id="7_elcoi"]
[ext_resource type="Texture2D" uid="uid://comsgswdpprb1" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (7).png" id="8_lw2op"]
[ext_resource type="Texture2D" uid="uid://bgqpe6uiercjq" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (8).png" id="9_d6ytk"]
[ext_resource type="Texture2D" uid="uid://b52qetjdy54mt" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (9).png" id="10_b7s1v"]
[ext_resource type="Texture2D" uid="uid://m6p3mvhu4xm0" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (10).png" id="11_hw3rg"]
[ext_resource type="Texture2D" uid="uid://bg7np64couths" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (11).png" id="12_lyyrs"]
[ext_resource type="Texture2D" uid="uid://dxck8h2qoyhjl" path="res://Assets/DecoracionFono/Corales/pixil-frame-0 (12).png" id="13_usf8m"]
[ext_resource type="PackedScene" uid="uid://6cyxh7kyrvm5" path="res://Scene/inicio_control.tscn" id="15_lw2op"]
[ext_resource type="Texture2D" uid="uid://mhiasdp3ruxj" path="res://Assets/DecoracionFono/deco.ar.png" id="16_b7s1v"]
[ext_resource type="PackedScene" uid="uid://ddpxuqxbolx3p" path="res://Scene/inventory_ui.tscn" id="16_d6ytk"]
[ext_resource type="Texture2D" uid="uid://c86jppr5lkn57" path="res://Assets/AssetsMenu/Madera.png" id="17_37g52"]
[ext_resource type="Script" uid="uid://cqvyharch8f0c" path="res://Scripts/Spawner/spawner_pez_lv_1.gd" id="18_hw3rg"]
[ext_resource type="PackedScene" uid="uid://bfqx2k5g23va6" path="res://Scene/interfaz_usuario.tscn" id="18_lyyrs"]
[ext_resource type="PackedScene" uid="uid://pky31ympd2oo" path="res://Scene/lib_o_cap.tscn" id="19_usf8m"]
[ext_resource type="PackedScene" uid="uid://cegi78pt5bk3f" path="res://Scene/inventory_test.tscn" id="22_5sp2o"]
[ext_resource type="Script" uid="uid://b8nev4b7a3165" path="res://Scripts/Spawner/spawner_pez_lv_2.gd" id="23_8vtdy"]
[ext_resource type="Script" uid="uid://jvaymwqmi5tm" path="res://Scripts/MainJuego/CameraFollow.gd" id="24_vpslh"]
[ext_resource type="Script" uid="uid://jrd6efph8raw" path="res://Scripts/Spawner/spawner_pez_lv3.gd" id="29_rmubn"]
[ext_resource type="Script" uid="uid://51qkycibwd7x" path="res://Scripts/Spawner/spawner_pez_lv4.gd" id="31_epf3u"]
[ext_resource type="Script" uid="uid://dgi81pvue7678" path="res://Scripts/Spawner/spawner_pez_lv5.gd" id="33_gsydt"]

[sub_resource type="Environment" id="Environment_j74a3"]
glow_enabled = true
glow_intensity = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1u8df"]
size = Vector2(18495, 22581.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5cs3"]
size = Vector2(9516.15, 6182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sp2o"]
size = Vector2(29.0205, 183.532)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyyrs"]
size = Vector2(2893, 733)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpslh"]
size = Vector2(2931, 479)

[node name="MainJuego" type="Node2D"]
script = ExtResource("1_d6ytk")
metadata/_edit_vertical_guides_ = [-1727.0]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j74a3")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(0, 4)

[node name="AreaAgua" type="Area2D" parent="." groups=["agua"]]
scale = Vector2(1, 1.00126)
collision_layer = 2
collision_mask = 0

[node name="Mar" type="Sprite2D" parent="AreaAgua"]
light_mask = 512
visibility_layer = 512
position = Vector2(7408, 1521.26)
scale = Vector2(12.0716, 2.49167)
texture = ExtResource("6_elcoi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAgua"]
position = Vector2(7420, 12441)
scale = Vector2(1, 1.08)
shape = SubResource("RectangleShape2D_1u8df")
debug_color = Color(0.395568, 0.830694, 0.703576, 0.42)

[node name="Mares-Profundo" type="Sprite2D" parent="AreaAgua"]
modulate = Color(0.65, 0.65, 0.65, 1)
position = Vector2(7211, 5834.68)
scale = Vector2(7.40296, 6.02356)
texture = ExtResource("2_1u8df")

[node name="Abisal" type="Sprite2D" parent="AreaAgua"]
texture_repeat = 2
position = Vector2(7292.04, 12055.8)
scale = Vector2(8.93511, 6.72547)
texture = ExtResource("4_82ygg")
region_enabled = true
region_rect = Rect2(7.21686, 82.3433, 1016.78, 941.657)

[node name="Hadal" type="Sprite2D" parent="AreaAgua"]
modulate = Color(0.0133333, 0, 0.4, 1)
position = Vector2(7264.04, 21550.9)
scale = Vector2(7.18198, 12.5396)
texture = ExtResource("4_82ygg")

[node name="ZonaAbisal" type="Area2D" parent="."]
position = Vector2(2838, 10597)
scale = Vector2(0.962, 1.02448)
collision_layer = 32
collision_mask = 8
script = ExtResource("5_cweaw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaAbisal"]
position = Vector2(4636, 1453)
shape = SubResource("RectangleShape2D_n5cs3")

[node name="ZonaHadal" type="Area2D" parent="."]
position = Vector2(3506, 18723)
scale = Vector2(0.772569, 2.13005)
collision_layer = 32
collision_mask = 8
script = ExtResource("6_gsydt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaHadal"]
position = Vector2(4885.08, 1453)
shape = SubResource("RectangleShape2D_n5cs3")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-142, 867)
scale = Vector2(4.7843, -7.83718)

[node name="Sprite2D7" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("17_37g52")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-104.388, 39.196)
shape = SubResource("RectangleShape2D_5sp2o")

[node name="InicioControl" parent="." instance=ExtResource("15_lw2op")]
visible = false
custom_minimum_size = Vector2(1500, 1000)
offset_left = -1405.0
offset_top = 18.0
offset_right = -1405.0
offset_bottom = 18.0

[node name="Pescador" parent="." instance=ExtResource("1_s1cr2")]
light_mask = 2
visibility_layer = 2
position = Vector2(222, 198)
scale = Vector2(1.58455, 2.06755)

[node name="TipoDeCaptura" type="Node2D" parent="Pescador"]

[node name="CapNormal" type="Sprite2D" parent="Pescador/TipoDeCaptura"]
visible = false
position = Vector2(-941, 35)
scale = Vector2(0.347268, 0.230312)
texture = ExtResource("4_ywkuk")
flip_h = true
flip_v = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Cielo" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(7244, -1671)
scale = Vector2(12.6048, 4.62989)
texture = ExtResource("6_1u8df")

[node name="Muelle" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-144, 247)
scale = Vector2(9.23466, 9.15013)
texture = ExtResource("7_elcoi")

[node name="Corales" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Coral1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(431, 599)
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_a0wg1")

[node name="Coral2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(282, 594)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_lw2op")

[node name="Coral3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(498, 590)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_d6ytk")

[node name="Coral4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(380, 582)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_b7s1v")

[node name="Coral5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(921, 606)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_hw3rg")

[node name="Coral6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(580, 602)
scale = Vector2(0.2, 0.2)
texture = ExtResource("12_lyyrs")

[node name="Coral7" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Corales"]
position = Vector2(714, 606)
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_usf8m")

[node name="Deco" type="Node2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco"]
position = Vector2(215, 598)
scale = Vector2(3.01611, 3.84139)
texture = ExtResource("16_b7s1v")
hframes = 2
vframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco"]
position = Vector2(1062, 614)
scale = Vector2(3.57931, 4.19968)
texture = ExtResource("16_b7s1v")
hframes = 2
vframes = 2
frame = 1

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco"]
position = Vector2(663, 608)
scale = Vector2(3.57931, 4.19968)
texture = ExtResource("16_b7s1v")
hframes = 2
vframes = 2
frame = 1

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco"]
position = Vector2(1225, 610)
scale = Vector2(3.57931, 4.19968)
texture = ExtResource("16_b7s1v")
hframes = 2
vframes = 2
frame = 1

[node name="Madera" type="Node2D" parent="ParallaxBackground/ParallaxLayer/Deco"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(-210, 406)
rotation = 1.5732
scale = Vector2(1.41859, 1.69634)
texture = ExtResource("17_37g52")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(-13, 406)
rotation = 1.5732
scale = Vector2(1.41859, 1.69634)
texture = ExtResource("17_37g52")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(-416, 401)
rotation = 1.5732
scale = Vector2(1.41999, 1.76869)
texture = ExtResource("17_37g52")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(-722, 659)
rotation = 3.14159
scale = Vector2(1.41859, 3.01701)
texture = ExtResource("17_37g52")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(-498, 662)
rotation = 3.14159
scale = Vector2(1.41859, 3.01701)
texture = ExtResource("17_37g52")

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Deco/Madera"]
position = Vector2(109, 665)
scale = Vector2(1.4834, -3.03815)
texture = ExtResource("17_37g52")

[node name="Pescados" type="Node2D" parent="."]
visible = false
position = Vector2(-3029, -217)
script = ExtResource("2_ypr6b")

[node name="Salmon" parent="Pescados" instance=ExtResource("3_ya0dr")]
position = Vector2(576, 265)

[node name="Orca" parent="Pescados" instance=ExtResource("4_f8irq")]
position = Vector2(330, 262)

[node name="Atun" parent="Pescados" instance=ExtResource("5_sxn4p")]
position = Vector2(435, 449)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("16_d6ytk")]
visible = false
offset_left = 348.0
offset_top = 62.0
offset_right = -304.0
offset_bottom = -86.0

[node name="InterfazUsuario" parent="CanvasLayer" instance=ExtResource("18_lyyrs")]

[node name="LibOCap" parent="CanvasLayer" instance=ExtResource("19_usf8m")]
visible = false

[node name="InventoryTest" parent="CanvasLayer" instance=ExtResource("22_5sp2o")]
visible = false
offset_left = 1340.0
offset_top = 45.0
offset_right = 1340.0
offset_bottom = 45.0

[node name="SpawnerPezSuperficial1" type="Area2D" parent="."]
position = Vector2(-870, 885)
scale = Vector2(1, 1.43124)
script = ExtResource("18_hw3rg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezSuperficial1"]
position = Vector2(1748.5, -22.5)
shape = SubResource("RectangleShape2D_lyyrs")
disabled = true

[node name="SpawnerPezSuperificial2" type="Area2D" parent="."]
position = Vector2(1783, 887)
scale = Vector2(1.81677, 1.42539)
script = ExtResource("18_hw3rg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezSuperificial2"]
position = Vector2(1748.5, -22.5)
shape = SubResource("RectangleShape2D_lyyrs")
disabled = true

[node name="SpawnerPezSuperificial3" type="Area2D" parent="."]
position = Vector2(7051, 887)
scale = Vector2(1.81677, 1.42539)
script = ExtResource("18_hw3rg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezSuperificial3"]
position = Vector2(1748.5, -22.5)
shape = SubResource("RectangleShape2D_lyyrs")
disabled = true

[node name="SpawnerPezSuperificial4" type="Area2D" parent="."]
position = Vector2(12485, 887)
scale = Vector2(1.30058, 1.42539)
script = ExtResource("18_hw3rg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezSuperificial4"]
position = Vector2(1748.5, -22.5)
shape = SubResource("RectangleShape2D_lyyrs")
disabled = true

[node name="SpawnerPezPocoProfunda" type="Area2D" parent="."]
position = Vector2(2589, 2076)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("23_8vtdy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezPocoProfunda"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezPocoProfunda2" type="Area2D" parent="."]
position = Vector2(7152, 2097)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("23_8vtdy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezPocoProfunda2"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezPocoProfunda3" type="Area2D" parent="."]
position = Vector2(11751, 2097)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("23_8vtdy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezPocoProfunda3"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas" type="Area2D" parent="."]
position = Vector2(7277, 3532)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas2" type="Area2D" parent="."]
position = Vector2(11308, 3532)
scale = Vector2(1.18331, 2.9591)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas2"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas3" type="Area2D" parent="."]
position = Vector2(3227, 3532)
scale = Vector2(1.1954, 2.9591)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas3"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas4" type="Area2D" parent="."]
position = Vector2(7277, 5703)
scale = Vector2(1.5554, 6.0791)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas4"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas5" type="Area2D" parent="."]
position = Vector2(11308, 5703)
scale = Vector2(1.18331, 6.0791)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas5"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas6" type="Area2D" parent="."]
position = Vector2(3227, 5703)
scale = Vector2(1.1954, 6.0791)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas6"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas7" type="Area2D" parent="."]
position = Vector2(7245, 8057)
scale = Vector2(1.42839, 2.52856)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas7"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas8" type="Area2D" parent="."]
position = Vector2(11276, 8057)
scale = Vector2(1.08669, 2.52856)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas8"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezProfundas9" type="Area2D" parent="."]
position = Vector2(3195, 8057)
scale = Vector2(1.09779, 2.52856)
script = ExtResource("29_rmubn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezProfundas9"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal" type="Area2D" parent="."]
position = Vector2(5117, 9625)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal2" type="Area2D" parent="."]
position = Vector2(9620, 9625)
scale = Vector2(1.4754, 2.9591)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal2"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal3" type="Area2D" parent="."]
position = Vector2(5117, 11975)
scale = Vector2(1.5554, 6.6391)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal3"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal4" type="Area2D" parent="."]
position = Vector2(9620, 11975)
scale = Vector2(1.4754, 6.6391)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal4"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal5" type="Area2D" parent="."]
position = Vector2(5117, 14384)
scale = Vector2(1.5554, 2.9591)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal5"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezAbisal6" type="Area2D" parent="."]
position = Vector2(9620, 14384)
scale = Vector2(1.4754, 2.9591)
script = ExtResource("31_epf3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezAbisal6"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="SpawnerPezHadal" type="Area2D" parent="."]
position = Vector2(5515, 16909)
scale = Vector2(1.2151, -6.42266)
script = ExtResource("33_gsydt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerPezHadal"]
shape = SubResource("RectangleShape2D_vpslh")
disabled = true

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("objeto_seguir")]
position = Vector2(-422, 264)
limit_left = -680
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("24_vpslh")
objeto_seguir = NodePath("../Pescador")

[connection signal="area_entered" from="ZonaAbisal" to="ZonaAbisal" method="_on_zona_abisal_area_entered"]
[connection signal="area_exited" from="ZonaAbisal" to="ZonaAbisal" method="_on_zona_abisal_area_exited"]
[connection signal="area_entered" from="ZonaHadal" to="ZonaHadal" method="_on_zona_hadal_area_entered"]
[connection signal="area_exited" from="ZonaHadal" to="ZonaHadal" method="_on_zona_hadal_area_exited"]
